--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>My first website</h1>
+    <h3>Look mama!! I can push to github</h3>
 </body>
 </html>
