learned git hub

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>My first website</h1>
     <h3>Look mama!! I can push to github</h3>
+    <h4>Lorem ipsum dolor sit amet.</h4>
 </body>
 </html>
