--- a/index.html
+++ b/index.html
@@ -12,5 +12,15 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt cupiditate nulla sit culpa consequuntur magnam nobis error doloremque ullam sed? Cumque maiores incidunt corrupti nulla assumenda perferendis nesciunt nam ducimus.</p>
     <p>saikat</p>
     <p>Lorem ipsum dolor sit amet.</p>
+    <table border="1px">
+        <tr>
+            <th>Name</th>
+            <th>Roll</th>
+        </tr>
+        <tr>
+            <td>saikat</td>
+            <td>582365</td>
+        </tr>
+    </table>
 </body>
 </html>
