--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt cupiditate nulla sit culpa consequuntur magnam nobis error doloremque ullam sed? Cumque maiores incidunt corrupti nulla assumenda perferendis nesciunt nam ducimus.</p>
     <p>saikat</p>
     <p>Lorem ipsum dolor sit amet.</p>
-    <table border="1px">
+    <table>
         <tr>
             <th>Name</th>
             <th>Roll</th>
@@ -22,5 +22,7 @@
             <td>582365</td>
         </tr>
     </table>
+    <p>felling happy now</p>
+    <p>i am a gost</p>
 </body>
 </html>
