done adding button

--- a/index.html
+++ b/index.html
@@ -30,5 +30,9 @@
     </table>
     <p>felling happy now</p>
     <p>i am a gost</p>
+
+    <input type="text">
+    <br>
+    <button>Click Me Baby!!!</button>
 </body>
 </html>
