--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </tr>
     </table>
     <p>felling happy now</p>
-    <p>i am a gost</p>
+    <p>i am a lover boy</p>
 
     <input type="text">
     <br>
