new header added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </table>
     <p>felling happy now</p>
     <p>i am a gost</p>
-
+    <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis, magni.</h2>
     <input type="text">
     <br>
     <button>Click Me Baby!!!</button>
